<resources>
    <string name="app_name">Avlam</string>
    <string name="lorem_ipsum" translatable="false">Lorem Ipsum</string>
    <string name="just_image">just_image</string>
    <string name="tanggal">Date</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">@string/app_name</string>
    <string name="nav_header_subtitle">English Language</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="search">Search</string>

    <string name="label_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="film_poster">film poster</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="language">Language</string>

    <string name="lang_en">English</string>
    <string name="lang_id">Indonesian</string>
    <string name="lang_jp">Japanese</string>
    <!--<string name="lang_kr">Korean</string>-->

    <string name="reg_usa">United States of America</string>
    <string name="reg_ina">Indonesia</string>
    <string name="reg_jpn">Japan</string>
    <string name="reg_kor">Korea</string>
    <string name="reg_chn">China</string>
    <string name="reg_ind">India</string>

    <string name="search_hint">Search Movie</string>
    <string name="favorite">Favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_to_favorite" translatable="false">Add to Favorite</string>
    <string name="favorite_movies">Favorite Movies List</string>
    <string name="empty_list">Empty list</string>

    <string name="key_reminder_daily" translatable="false">key_reminder_daily</string>
    <string name="key_reminder_playing" translatable="false">key_playing_reminder</string>

    <string name="message_alarm_daily_reminder">Good Morning. It\'s time to check our Movies Catalogue!</string>

    <string name="label_activated">Activated reminder every 7.00 AM</string>
    <string name="label_activated_release">Activated release reminder every 8.00 AM</string>
    <string name="label_deactivated">Deactivated</string>

    <string name="preferences_notification">Notification</string>

    <string name="label_reminder_daily_title">Daily Reminder Notification</string>
    <string name="label_reminder_daily_summary">Enable/disable daily reminder notification</string>
    <string name="label_reminder_playing_title">Today\'s Release Movie Notification</string>
    <string name="label_reminder_playing_summary">Enable/disable today\'s release movies notification</string>

    <string name="pref_region" translatable="false">us</string>
    <string name="pref_language" translatable="false">en</string>

    <string name="pref_movies" translatable="false">pref_movies</string>
    <string name="pref_change_language">Language Settings</string>

    <string name="pref_language_key" translatable="false">pref_language</string>
    <string name="pref_region_key" translatable="false">pref_region</string>
    <string name="preferences_language_region">Languages and Region</string>
    <string name="pref_change_region">Change Movies Region</string>
    <string name="english_synopsis" translatable="false">English Synopsis:</string>

    <string-array name="language_array">
        <item>@string/lang_en</item>
        <item>@string/lang_id</item>
        <item>@string/lang_jp</item>
        <!--<item>@string/lang_kr</item>-->
    </string-array>

    <string-array name="language_alias">
        <item>en</item>
        <item>in</item>
        <item>ja</item>
        <!--<item>ko</item>-->
    </string-array>

    <string-array name="region_array">
        <item>@string/reg_usa</item>
        <item>@string/reg_ina</item>
        <item>@string/reg_jpn</item>
        <item>@string/reg_kor</item>
        <item>@string/reg_chn</item>
        <item>@string/reg_ind</item>
    </string-array>

    <string-array name="region_alias">
        <item>us</item>
        <item>id</item>
        <item>jp</item>
        <item>kr</item>
        <item>cn</item>
        <item>in</item>
    </string-array>

</resources>
