<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferences_notification">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_reminder_daily"
            android:summary="@string/label_reminder_daily_summary"
            android:title="@string/label_reminder_daily_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_reminder_playing"
            android:summary="@string/label_reminder_playing_summary"
            android:title="@string/label_reminder_playing_title" />

    </PreferenceCategory>

    <!--<PreferenceCategory android:title="@string/action_settings">

        <Preference
            android:key="@string/key_setting_locale"
            android:summary="@string/label_setting_locale_summary"
            android:title="@string/label_setting_locale_title" />

    </PreferenceCategory>-->

    <PreferenceCategory android:title="@string/preferences_language_region">

        <ListPreference
            android:entries="@array/language_array"
            android:entryValues="@array/language_alias"
            android:key="@string/pref_language_key"
            android:title="@string/pref_change_language" />

        <ListPreference
            android:entries="@array/region_array"
            android:entryValues="@array/region_alias"
            android:key="@string/pref_region_key"
            android:title="@string/pref_change_region"/>

    </PreferenceCategory>

</PreferenceScreen>